added owner database
