# middleware/validate.js
@@ -23,6 +23,28 @@ const saveHorse = (req, res, next) => {
     });
 };
 
+const saveOwner = (req, res, next) => {
+    const validationRule = {
+        firstName: 'required|string',
+        lastName: 'required|string',
+        email: 'required|email',
+        phone: 'required|string'
+
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
 module.exports = {
-    saveHorse
+    saveHorse,
+    saveOwner
 };
